ecmascript/parser/tests/test262-error-references/fail/6dabf190eea04883.js.stderr
error: Expression expected
 --> $DIR/tests/test262-parser/fail/6dabf190eea04883.js:1:8
  |
1 | (...a) + 1
  |        ^

